# httpie-websockets

./: .bumpversion.cfg  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  HTTPIE_HELP  Justfile  LICENSE  Makefile  README.md  cliff.toml  httpie_websockets.py  pyproject.toml
scripts/: update_changelog.py
tests/: __init__.py  conftest.py  docker-compose.yml  test__connect.py  test_cancel_all_tasks.py  test_connect.py  test_convert3ws_headers.py  test_dummy_response.py  test_escape_backslashes.py  test_normalize_url.py  test_put.py  test_read_stdin.py  test_receive.py  test_send_message.py  test_write_stdout.py
tests/ssl/: cert.pem  key.pem
tests/sync_client/: _test_connect2mock_server.py  _test_listening.py  sync_httpie_websockets.py
tests/ws_server/: .dockerignore  Cargo.toml  Dockerfile
tests/ws_server/src/: main.rs
