[project]
name = "httpie-websockets"
version = "0.0.3"
description = "Websocket plugin for httpie"
authors = [
    { name = "belingud", email = "1170202353@qq.com" }
]
dependencies = [
    "websockets>=12.0",
    "requests>=2.31.0",
    "httpie>=3.2.3",
]
readme = "README.md"
requires-python = ">= 3.8"
home-page = "https://github.com/belingud/httpie-websockets"
repository = "https://github.com/belingud/httpie-websockets"
issues = "https://github.com/belingud/httpie-websockets/issues"
license = { file = "LICENSE" }
keywords = ["http", "httpie", "plugin", "websocket", "websockets"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
[tool.pdm]
distribution = true

[tool.pdm.build]
excludes = ["tests", ".idea/", ".vscode", ".venv", "pdm.lock", ".gitignore", "var"]
includes = ["httpie_websockets.py"]

[tool.pdm.dev-dependencies]
dev = [
    "bump2version>=1.0.1",
]

[project.entry-points."httpie.plugins.transport.v1"]
httpie_websockets = "httpie_websockets:WebsocketSPlugin"
httpie_websocket = "httpie_websockets:WebsocketPlugin"

