[project]
name = "httpie-websockets"
version = "0.5.1"
description = "Websocket plugin for httpie"
authors = [
    { name = "belingud", email = "1170202353@qq.com" }
]
dependencies = [
    "requests>=2.31.0",
    "httpie>=3.2.3",
    "websocket-client>=1.8.0",
    "python-socks>=2.5.0",
]
readme = "README.md"
requires-python = ">= 3.8"
license = { file = "LICENSE" }
keywords = ["http", "httpie", "plugin", "websocket", "websockets"]
classifiers = [
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Environment :: Console",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development",
    "Topic :: System :: Networking",
    "Topic :: Terminals",
    "Topic :: Text Processing",
    "Topic :: Utilities"
]

[project.urls]
Homepage = "https://github.com/belingud/httpie-websockets"
Documentation = "https://github.com/belingud/httpie-websockets"
Issues = "https://github.com/belingud/httpie-websockets/issues"
Source = "https://github.com/belingud/httpie-websockets"
Github = "https://github.com/belingud/httpie-websockets"


[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project.entry-points."httpie.plugins.transport.v1"]
httpie_websockets = "httpie_websockets:WebsocketSPlugin"
httpie_websocket = "httpie_websockets:WebsocketPlugin"

[tool.pytest.ini_options]
addopts = "-rsxX -l --tb=short --strict"
testpaths = ["tests/"]
python_files = ["test*.py"]
asyncio_mode = "auto"
markers = ["skipif: conditionally skip tests"]

[tool.pdm]
distribution = true

[tool.isort]
profile = "black"

[tool.pdm.build]
excludes = ["tests", ".idea/", ".vscode", ".venv", "pdm.lock", ".gitignore", "var"]
includes = ["httpie_websockets.py"]

[tool.pdm.lock]
default = ["linux", "macos", "windows"]

[tool.pdm.scripts]
bump = "bump2version {args}"

[tool.pdm.dev-dependencies]
dev = [
    "bump2version>=1.0.1",
    "pytest>=8.3.1",
    "pytest-mock>=3.14.0",
    "pytest-asyncio>=0.23.8",
    "pre-commit>=3.5.0",
    "deptry>=0.17.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.5.5",
]
